# mlops-poetry

./: README.md
p2/: plt_temp.py  pyproject.toml
